--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-pip install flask Flask-PyMongo
-
-python -m pip install "pymongo[srv]"
-
-pip install flask-bcrypt
+Flask==2.0.1
+Flask-PyMongo==2.3.0
+pymongo[srv]==3.12.0
+Flask-Bcrypt==0.7.1
