--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,31 @@
-Flask==2.0.1
+bcrypt==4.0.1
+blinker==1.6.2
+click==8.1.3
+colorama==0.4.6
+dnspython==2.3.0
+Flask==2.3.2
+Flask-Bcrypt==1.0.1
 Flask-PyMongo==2.3.0
-pymongo[srv]==3.12.0
-Flask-Bcrypt==0.7.1
+Flask-WTF==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+pymongo==4.4.0
+Werkzeug==2.3.6
+WTForms==3.0.1
+bcrypt==4.0.1
+blinker==1.6.2
+click==8.1.3
+colorama==0.4.6
+dnspython==2.3.0
+Flask==2.3.2
+Flask-Bcrypt==1.0.1
+Flask-PyMongo==2.3.0
+Flask-WTF==1.1.1
+gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+pymongo==4.4.0
+Werkzeug==2.3.6
+WTForms==3.0.1
