--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.6
 dnspython==2.3.0
 Flask==2.3.2
 Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.0
 Flask-PyMongo==2.3.0
 Flask-WTF==1.1.1
 gunicorn==20.1.0
